# brick-templates

./: Makefile  best-practices.ttl  generate_sphinx_docs.py  make-markdown.py  pyproject.toml
.github/workflows/: static.yml
basic-building/: equipment.yml  locations.yml  properties.yml
source/: conf.py
