[project]
name = "bmotif-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "buildingmotif[topquadrant]",
    "pydot>=3.0.2",
    "sphinx-toolbox>=3.8.1",
    "sphinx>=7.4.7",
]

[tool.uv.sources]
buildingmotif = { git = "https://github.com/NREL/buildingmotif.git", rev = "develop" }
